[package]
name = "revision_presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
